--- a/public-ledwax-web-ui/app/index.html
+++ b/public-ledwax-web-ui/app/index.html
@@ -105,6 +105,8 @@
 		<script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
 		<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 		<script src="bower_components/html5-boilerplate/dist/js/main.js"></script>
+		<script src="bower_components/ng-bootstrap-alerts/dist/index.js"></script>
+		<script src="bower_components/q/q.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 		<!-- build:js({.tmp,app}) js/app.js -->
