--- a/src/modules/public-ledwax-web-ui/app/index.html
+++ b/src/modules/public-ledwax-web-ui/app/index.html
@@ -60,6 +60,11 @@
 		<nav class="navbar navbar-default" role="navigation">
 			<!-- toggle nav for mobile display -->
 			<div class="navbar-header">
+				<form>
+					<label for="cloud_id">Cloud</label>
+					<select id="cloud_id" name="cloud_id" data-ng-options="o.name for o in cloudHosts track by o.id"
+						data-ng-model="currentCloudHost"></select>
+				</form>
 				<button type="button" class="navbar-toggle"
 					ng-init="navCollapsed = true"
 					ng-click="navCollapsed = !navCollapsed">
@@ -81,6 +86,11 @@
 		<!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
+		<div id="wrap_alerts"
+			style="position: absolute; top: 0; right: 100%; width: 50%; padding: 0.8em;">
+			<alert ng-repeat="alert in appAlerts" type="alert.type"
+				close="closeAlert($index)" ng-bind="alert.msg"></alert>
+		</div>
 		<div ng-view></div>
 		<div>
 			LEDWax Web UI v<span app-version></span>
@@ -103,7 +113,6 @@
 		<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 		<script src="bower_components/html5-boilerplate/dist/js/main.js"></script>
 		<script src="bower_components/ng-bootstrap-alerts/dist/index.js"></script>
-		<script src="bower_components/q/q.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 		<!-- build:js({.tmp,app}) js/app.js -->
