added ledwax_strips model and saveDeviceAndSaveLEDStrips support
bunch of refactoring, moved genericparticlefunction and getdevicecapabilities methods to util for re-use; nailed async implementation for sending command to set strip index and then get caps; test passing, gui loads

--- a/src/modules/public-ledwax-web-ui/app/index.html
+++ b/src/modules/public-ledwax-web-ui/app/index.html
@@ -87,7 +87,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 		<div id="wrap_alerts"
-			style="position: absolute; top: 0; right: 100%; width: 50%; padding: 0.8em;">
+			style="position: absolute; top: 0; right: 0; width: 50%; height: 25%; padding: 0.8em;">
 			<alert ng-repeat="alert in appAlerts" type="alert.type"
 				close="closeAlert($index)" ng-bind="alert.msg"></alert>
 		</div>
