prototype LED control page

--- a/src/modules/public-ledwax-web-ui/app/index.html
+++ b/src/modules/public-ledwax-web-ui/app/index.html
@@ -23,6 +23,11 @@
 	href="bower_components/bootstrap-css/css/bootstrap-theme.css">
 <link rel="stylesheet"
 	href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
+<link rel="stylesheet" 
+	href="bower_components/angular-color-picker/dist/angularjs-color-picker.min.css" />
+<!-- only include if you use bootstrap -->
+<link rel="stylesheet" 
+	href="bower_components/angular-color-picker/dist/themes/angularjs-color-picker-bootstrap.min.css" />
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:css(.tmp,app) css/main.css -->
@@ -113,6 +118,8 @@
 		<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 		<script src="bower_components/html5-boilerplate/dist/js/main.js"></script>
 		<script src="bower_components/ng-bootstrap-alerts/dist/index.js"></script>
+		<script src="bower_components/tinycolor/dist/tinycolor-min.js"></script>
+		<script src="bower_components/angular-color-picker/dist/angularjs-color-picker.min.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 		<!-- build:js({.tmp,app}) js/app.js -->
