--- a/src/modules/public-ledwax-web-ui/app/index.html
+++ b/src/modules/public-ledwax-web-ui/app/index.html
@@ -23,11 +23,12 @@
 	href="bower_components/bootstrap-css/css/bootstrap-theme.css">
 <link rel="stylesheet"
 	href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
-<link rel="stylesheet" 
+<link rel="stylesheet"
 	href="bower_components/angular-color-picker/dist/angularjs-color-picker.min.css" />
 <!-- only include if you use bootstrap -->
-<link rel="stylesheet" 
+<link rel="stylesheet"
 	href="bower_components/angular-color-picker/dist/themes/angularjs-color-picker-bootstrap.min.css" />
+<link rel="stylesheet" type="text/css" href="bower_components/angularjs-slider/dist/rzslider.css"/>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:css(.tmp,app) css/main.css -->
@@ -66,8 +67,9 @@
 			<!-- toggle nav for mobile display -->
 			<div class="navbar-header">
 				<form>
-					<label for="cloud_id">Cloud</label>
-					<select id="cloud_id" name="cloud_id" data-ng-options="o.name for o in cloudHosts track by o.id"
+					<label for="cloud_id">Cloud</label> <select id="cloud_id"
+						name="cloud_id"
+						data-ng-options="o.name for o in cloudHosts track by o.id"
 						data-ng-model="currentCloudHost"></select>
 				</form>
 				<button type="button" class="navbar-toggle"
@@ -119,7 +121,9 @@
 		<script src="bower_components/html5-boilerplate/dist/js/main.js"></script>
 		<script src="bower_components/ng-bootstrap-alerts/dist/index.js"></script>
 		<script src="bower_components/tinycolor/dist/tinycolor-min.js"></script>
-		<script src="bower_components/angular-color-picker/dist/angularjs-color-picker.min.js"></script>
+		<script
+			src="bower_components/angular-color-picker/dist/angularjs-color-picker.min.js"></script>
+		<script src="bower_components/angularjs-slider/dist/rzslider.min.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 		<!-- build:js({.tmp,app}) js/app.js -->
@@ -139,6 +143,13 @@
 		<script src="components/version/version.js"></script>
 		<script src="components/version/version-directive.js"></script>
 		<script src="components/version/interpolate-filter.js"></script>
+		<script src="components/ledwax-striptype/ledwax-striptype.js"></script>
+		<script src="components/ledwax-striptype/ledwax-striptype-filter.js"></script>
+		<script src="components/ledwax-displaymode/ledwax-displaymode.js"></script>
+		<script
+			src="components/ledwax-displaymode/ledwax-displaymode-filter.js"></script>
+		<script src="components/ledwax-fademode/ledwax-fademode.js"></script>
+		<script src="components/ledwax-fademode/ledwax-fademode-filter.js"></script>
 		<!-- endbuild -->
 </body>
 </html>
