--- a/src/modules/public-ledwax-web-ui/app/index.html
+++ b/src/modules/public-ledwax-web-ui/app/index.html
@@ -28,7 +28,8 @@
 <!-- only include if you use bootstrap -->
 <link rel="stylesheet"
 	href="bower_components/angular-color-picker/dist/themes/angularjs-color-picker-bootstrap.min.css" />
-<link rel="stylesheet" type="text/css" href="bower_components/angularjs-slider/dist/rzslider.css"/>
+<link rel="stylesheet" type="text/css"
+	href="bower_components/angularjs-slider/dist/rzslider.css" />
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:css(.tmp,app) css/main.css -->
@@ -67,10 +68,16 @@
 			<!-- toggle nav for mobile display -->
 			<div class="navbar-header">
 				<form>
-					<label for="cloud_id">Cloud</label> <select id="cloud_id"
-						name="cloud_id"
-						data-ng-options="o.name for o in cloudHosts track by o.id"
-						data-ng-model="currentCloudHost"></select>
+					<label for="cloud_id" style="margin-right: 0.65em;">Cloud</label><span uib-dropdown><button
+							id="butt_drp_disp_mode_{{device.id}}_{{ledstrip.stripIndex}}"
+							type="button" class="btn btn-primary" uib-dropdown-toggle>
+							{{currentCloudHost.name}}<span class="caret"></span>
+						</button>
+						<ul class="dropdown-menu" uib-dropdown-menu role="menu"
+							aria-labelledby="butt_drp_disp_mode_{{device.id}}_{{ledstrip.stripIndex}}">
+							<li role="menuitem" ng:repeat="o in cloudHosts"><a
+								ng:click="currentCloudHost = o">{{o.name}}</a></li>
+						</ul></span>
 				</form>
 				<button type="button" class="navbar-toggle"
 					ng-init="navCollapsed = true"
