bind login to particle cloud
added logout controller; cleanup sessiontoken cookie implementation across API and GUI; cleanup login/logout implementaton; cleanup user session impl in ledwaxapp.js; GUI fixes

--- a/src/modules/public-ledwax-web-ui/app/index.html
+++ b/src/modules/public-ledwax-web-ui/app/index.html
@@ -140,6 +140,7 @@
 	<script src="services/services.js"></script>
 	<script src="controllers/ledwaxapp.js"></script>
 	<script src="controllers/login.js"></script>
+	<script src="controllers/logout.js"></script>
 	<script src="controllers/leds.js"></script>
 	<script src="controllers/setup.js"></script>
 	<script src="controllers/about.js"></script>
